// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvbFlyout should create 1`] = `
Object {
  "$attrs$": Object {
    "class": "",
  },
  "$children$": Array [
    Object {
      "$flags$": 0,
      "$text$": "",
    },
  ],
  "$elm$": undefined,
  "$flags$": 0,
  "$key$": undefined,
  "$name$": undefined,
  "$tag$": Object {},
}
`;

exports[`EvbFlyout should not render host class when openend 1`] = `
Object {
  "$attrs$": Object {
    "class": "",
  },
  "$children$": Array [
    Object {
      "$flags$": 0,
      "$text$": "",
    },
  ],
  "$elm$": undefined,
  "$flags$": 0,
  "$key$": undefined,
  "$name$": undefined,
  "$tag$": Object {},
}
`;

exports[`EvbFlyout should render host class when openend 1`] = `
Object {
  "$attrs$": Object {
    "class": "flyout--open",
  },
  "$children$": Array [
    Object {
      "$attrs$": Object {
        "class": "flyout",
      },
      "$children$": Array [
        Object {
          "$attrs$": null,
          "$children$": Array [
            Object {
              "$attrs$": Object {
                "heading": "3",
              },
              "$children$": null,
              "$elm$": undefined,
              "$flags$": 0,
              "$key$": undefined,
              "$name$": undefined,
              "$tag$": "evb-header",
            },
            Object {
              "$attrs$": Object {
                "class": "close",
                "onClick": [Function],
              },
              "$children$": Array [
                Object {
                  "$flags$": 0,
                  "$text$": "×",
                },
              ],
              "$elm$": undefined,
              "$flags$": 0,
              "$key$": undefined,
              "$name$": undefined,
              "$tag$": "button",
            },
          ],
          "$elm$": undefined,
          "$flags$": 0,
          "$key$": undefined,
          "$name$": undefined,
          "$tag$": "header",
        },
        Object {
          "$attrs$": null,
          "$children$": null,
          "$elm$": undefined,
          "$flags$": 0,
          "$key$": undefined,
          "$name$": undefined,
          "$tag$": "slot",
        },
      ],
      "$elm$": undefined,
      "$flags$": 0,
      "$key$": undefined,
      "$name$": undefined,
      "$tag$": "aside",
    },
  ],
  "$elm$": undefined,
  "$flags$": 0,
  "$key$": undefined,
  "$name$": undefined,
  "$tag$": Object {},
}
`;
